--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
+serenity = { version = "0.11", default-features = false, features = [
+    "cache",
+    "client",
+    "gateway",
+    "model",
+    "rustls_backend",
+] }
 tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
